--- a/public/style.css
+++ b/public/style.css
@@ -161,7 +161,7 @@ ul {
   padding-left: 10px;
   position: absolute;
   right: 0;
-  width: 70%;
+  width: 65%;
 }
 .msgcolor{
   border: 10px solid #000;
@@ -219,6 +219,7 @@ ul {
   right:50px;
   float: right;
 }
+.sendmsg{border: 10px solid black;left: 95%;color: black;width: 5%;bottom: 0;height: 60px;position: absolute;font-size: 25px;}
 @media only screen and (max-device-width: 480px) {
   * {
     box-sizing: border-box;
@@ -381,7 +382,7 @@ ul {
     padding-left: 10px;
     position: absolute;
     right: 0;
-    width: 100%;
+    width: 85%;
     font-size: 30px;
   }
   .msgcolor{
@@ -410,7 +411,7 @@ ul {
     position: absolute;
     right: 0;
     width: 10%;
-    font-size: 30px;
+    font-size: 25px;
   }
   .msgsize{
     border: 10px solid #000;
@@ -424,7 +425,7 @@ ul {
     position: absolute;
     right: 0;
     width: 15%;
-    font-size: 30px;
+    font-size: 25px;
   }
   .msgspeed{
     border: 10px solid #000;
@@ -438,10 +439,11 @@ ul {
     position: absolute;
     right: 0;
     width: 15%;
-    font-size: 30px;
+    font-size: 25px;
   }
   .time{
     right:50px;
     float: right;
   }
+  .sendmsg{border: 10px solid black;left: 85%;color: black;width: 15%;bottom: 0;height: 90px;position: absolute;font-size: 35px;}
  }
