--- a/public/style.css
+++ b/public/style.css
@@ -431,7 +431,7 @@ ul {
     border: 10px solid #000;
     border-right-width: 2.5px;
     border-left-width: 2.5px;
-    bottom: 5%;
+    bottom: 90px;
     height: 70px;
     left: 45%;
     outline: none;
